-bug#0000730: Non-standard port ignored
-bug#0000731: Add Host to Tree from Device page incomplete
-bug#0000739: "Unit value" parameter in template options ignored 
-bug#0000741: Links get mismatched after using Zoom on graph 
-bug#0000746: Clearing Cacti log file from web interface does not preserve Cacti log file permissions
-bug#0000758: LDAP user with non-Alphanumeric characters in the password fail to authenicate
-bug: SQL Query in Graphs was not set write causing graph failures in preview mode and other modes.
-bug: Setting a host template filter in devices, followed by moving off and then back on the page generated an error.
-bug: PHP 5.1 snmpwalks utilize the bulk method by default.  Therefore, prefer them over the bulkwalk binary.
-bug: Allow read_config_option to force a database refresh when one is wanted.
-bug: Fix issue with the script server where a function called where a data query without the <extra_args> does not work.
-bug: Make load average script compatible with Mac OS X systems.
-bug: Correct an issue where under certain circumstances, |query_ifSize| was being implemented as the maximum value for an rrd
-bug: Correct issue where dhtml caching was not working with expand hosts enabled

0.8.6h
-bug#0000383: Add more verbose RRDtool debug output from Graph Management.
-bug#0000522: Take 'oid_index_parse' into consideration when handling 'OID/REGEXP:' data query fields.
-bug#0000528: Allow template_import.php to return without error when XML file is invalid in PHP 4.4 and above.
-bug#0000557: Changing filter value resulted in invalid page/row selection.
-bug#0000572: Added $database_port to config.php.
-bug#0000570: Grammar edit for text about already up-to-date.
-bug#0000571: Misleading diagnostic error messages during install have been updated.
-bug#0000582: Ampersand present in graph template graph name causes XML import to fail.
-bug#0000585: Graphing fails using AREA/STACK/LINE/HRULE/VRULE without defined color.